@@ -234,7 +234,7 @@ SEXP setAttrib(SEXP vec, SEXP name, SEXP val)
     if (vec == R_NilValue)
 	error(_("attempt to set an attribute on NULL"));
 
-    if (NAMED(val)) val = duplicate(val);
+    if (NAMED(val)) val = R_FixupRHS(vec, val);
     SET_NAMED(val, NAMED(val) | NAMED(vec));
     UNPROTECT(2);
 
@@ -1648,7 +1648,7 @@ SEXP R_do_slot_assign(SEXP obj, SEXP name, SEXP value) {
 	/* simplified version of setAttrib(obj, name, value);
 	   here we do *not* treat "names", "dimnames", "dim", .. specially : */
 	PROTECT(name);
-	if (NAMED(value)) value = duplicate(value);
+	if (NAMED(value)) value = R_FixupRHS(obj, value);
 	SET_NAMED(value, NAMED(value) | NAMED(obj));
 	UNPROTECT(1);
 	installAttrib(obj, name, value);
